# replay-renderer

./: .gitattributes  .gitignore  Cargo.toml  README.md  manifest
.agents/plans/phase7-earlystart-m1-m3-dilog-verify-frames/: 00-overview.md  01-workspace-fixtures-ci.md  02-m1-replay-splice.md  03-m2-replay-verify.md  04-m3-frames-overlay-encode.md  05-m4-outlook-and-handback.md  06-resolution.md  07-review-log.md
.beads/: metadata.json
.github/workflows/: ci.yaml
crates/reexec-agent/: Cargo.toml
crates/reexec-agent/src/: lib.rs
crates/replay-encode/: Cargo.toml
crates/replay-encode/src/: args.rs  error.rs  lib.rs  probe.rs  session.rs  stills.rs
crates/replay-encode/tests/: m3_encode.rs  m3_stills_golden.rs
crates/replay-frames/: Cargo.toml
crates/replay-frames/src/: codec.rs  convert.rs  lib.rs  rfp.rs  scale.rs
crates/replay-frames/tests/: m3_frames.rs
crates/replay-mockhv/: Cargo.toml
crates/replay-mockhv/src/: corrupt.rs  guest.rs  lib.rs  writer.rs
crates/replay-overlay/: Cargo.toml
crates/replay-overlay/assets/: font8x8.psf
crates/replay-overlay/benches/: frame_pipeline.rs
crates/replay-overlay/src/: banner.rs  compose.rs  counter.rs  draw.rs  font.rs  hud.rs  lib.rs  timeline.rs
crates/replay-overlay/tests/: m3_overlay.rs
crates/replay-proto/: Cargo.toml
crates/replay-proto/src/: lib.rs
crates/replay-splice/: Cargo.toml
crates/replay-splice/examples/: make_fuzz_corpus.rs
crates/replay-splice/src/: assemble.rs  container.rs  dhilog.rs  error.rs  lib.rs  rules.rs
crates/replay-splice/tests/: m1.rs  prop.rs
crates/replay-types/: Cargo.toml
crates/replay-types/src/: lib.rs
crates/replay-verify/: Cargo.toml
crates/replay-verify/schema/: divergence-report.v2.schema.json
crates/replay-verify/src/: bisect.rs  hv.rs  lib.rs  mock.rs  report.rs  verify.rs
crates/replay-verify/tests/: m2.rs
crates/replayd/: Cargo.toml
crates/replayd/src/: lib.rs
fuzz/: Cargo.toml
fuzz/corpus/dhilog_validator/: bad_version  flipped_body  icount_past_end  no_end  segment_1  segment_3  segment_5  seq_gap  unsealed
fuzz/corpus/dilog_reader/: fixture_container
fuzz/fuzz_targets/: dhilog_validator.rs  dilog_reader.rs
tests/fixtures/: frames.rfp
tests/fixtures/fixture_tree/: path.json  path_recorded_skew.json  segment_2.dhilog  segment_3_recorded_skew.dhilog  segment_4.dhilog
xtask/: Cargo.toml
xtask/src/: fixtures.rs  main.rs
