[workspace]
members = ["crates/*", "xtask"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
determinism-proto = { path = "../control-plane/crates/determinism-proto", default-features = false }

# pins matched to sibling repos (state-scorer / control-plane) where shared
blake3 = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lz4_flex = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

criterion = "0.5"
proptest = "1"
