[package]
name = "replay-splice-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
replay-splice = { path = "../crates/replay-splice" }

[[bin]]
name = "dilog_reader"
path = "fuzz_targets/dilog_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dhilog_validator"
path = "fuzz_targets/dhilog_validator.rs"
test = false
doc = false
bench = false
