[package]
name = "replay-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
replay-types = { path = "../replay-types" }
replay-frames = { path = "../replay-frames" }
replay-splice = { path = "../replay-splice" }
thiserror = { workspace = true }

[dev-dependencies]
image = { workspace = true }
replay-mockhv = { path = "../replay-mockhv" }
criterion = { workspace = true }

[[bench]]
name = "frame_pipeline"
harness = false
