[package]
name = "replay-splice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
replay-types = { path = "../replay-types" }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
replay-mockhv = { path = "../replay-mockhv" }
proptest = { workspace = true }
